Конфигурация форматов дат вынесена в application.properties, добавлен конфигурационный класс